kubernetes/apps/garage/garage/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
spec:
  hostnames:
    - "s3.${SECRET_DOMAIN}"
    - "*.s3.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: garage
          namespace: garage
          port: 3900
      timeouts:
        request: "300s"
